src/test/ui/parser/keyword-break-as-identifier.stderr
error: expected pattern, found keyword `break`
  --> $DIR/keyword-break-as-identifier.rs:6:9
   |
LL |     let break = "foo"; //~ error: expected pattern, found keyword `break`
   |         ^^^^^ expected pattern

error: aborting due to previous error

